Fixed donation bar donor and donated text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,9 @@ body {
     font-weight: 700;
     color: #02161b; }
 
+.float-right {
+  text-align: right; }
+
 .college-button {
   width: 75%;
   background: #8e35a4;
@@ -54,9 +57,9 @@ body {
 
 .card {
   margin: 0 auto;
-  height: 75vh;
   width: calc((100% - 2rem) / 4); }
   .card-front {
+    height: 60vh;
     border: #777777 1px solid; }
     .card-front-img {
       background: url("../img/campus.png") center no-repeat;
@@ -65,6 +68,7 @@ body {
     .card-front-desc {
       padding: 1em; }
   .card-back {
+    height: 60vh;
     padding: 1em;
     text-align: center;
     border: #777777 1px solid; }
@@ -75,6 +79,7 @@ body {
 .tracker {
   padding-top: 5em; }
   .tracker-bar {
+    margin: 0.5em 0px;
     background: #777777;
     height: 25px;
     position: relative;
