--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,9 +1,9 @@
 .card {
     margin: 0 auto;
-    height: 75vh;
     width: calc((100% - #{$gutter-horizontal}) / 4);
 
     &-front {
+        height: 60vh;
         border: $college-secondary 1px solid;
         &-img {
             background: url("../img/campus.png") center no-repeat;
@@ -16,6 +16,7 @@
     }
 
     &-back {
+        height: 60vh;
         padding: 1em;
         text-align: center;
         border: $college-secondary 1px solid;
