--- a/sass/components/_status-bar.scss
+++ b/sass/components/_status-bar.scss
@@ -1,7 +1,7 @@
 .tracker{
     padding-top: 5em;
 &-bar {
-
+    margin: 0.5em 0px;
     background: $college-secondary;
     height: 25px;
     position: relative;
